--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "textutils",
   "version": "0.1.0",
@@ -7,6 +8,7 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "react": "^17.0.2",
+    "react-country-region-selector": "^3.4.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
